--- a/spec/runner.html
+++ b/spec/runner.html
@@ -17,10 +17,12 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../src/ProviderBase.js"></script>
+  <script type="text/javascript" src="../src/GoogleProvider.js"></script>
   <script type="text/javascript" src="../src/Geocoded.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="ProviderBase.spec.js"></script>
+  <script type="text/javascript" src="GoogleProvider.spec.js"></script>
   <script type="text/javascript" src="Geocoded.spec.js"></script>
 
   <script type="text/javascript">
