Lots of polish on Geocoded/Google Provider class. New GeoJSON dumper class

--- a/spec/runner.html
+++ b/spec/runner.html
@@ -19,11 +19,13 @@
   <script type="text/javascript" src="../src/ProviderBase.js"></script>
   <script type="text/javascript" src="../src/GoogleProvider.js"></script>
   <script type="text/javascript" src="../src/Geocoded.js"></script>
+  <script type="text/javascript" src="../src/GeoJSONDumper.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="ProviderBase.spec.js"></script>
   <script type="text/javascript" src="GoogleProvider.spec.js"></script>
   <script type="text/javascript" src="Geocoded.spec.js"></script>
+  <script type="text/javascript" src="GeoJSONDumper.spec.js"></script>
 
   <script type="text/javascript">
     (function() {
