Adding geocoding provider for HTTP/HTTPS queries to Google's API. This does not use Google Maps API JS, and is compatible with Node.JS and browser JavaScript. Also adding examples and tests.

--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -24,6 +24,8 @@
   
   <script src="src/GeoJSONDumper.js"></script>
   
+  <script src="src/providers/GoogleAPIProvider.js"></script>
+  
   <script src="src/providers/GoogleProvider.js"></script>
   
   <script src="src/providers/MapquestProvider.js"></script>
@@ -31,6 +33,8 @@
   <script src="spec/GeoJSONDumper.spec.js"></script>
   
   <script src="spec/Geocoded.spec.js"></script>
+  
+  <script src="spec/providers/GoogleAPIProvider.spec.js"></script>
   
   <script src="spec/providers/GoogleProvider.spec.js"></script>
   
