Added documentation/unit tests for ProviderFactory. Style cleanup on rest of files

--- a/spec/runner.html
+++ b/spec/runner.html
@@ -24,6 +24,8 @@
   
   <script src="../src/GeoJSONDumper.js"></script>
   
+  <script src="../src/GeocoderProviderFactory.js"></script>
+  
   <script src="../src/providers/GoogleAPIProvider.js"></script>
   
   <script src="../src/providers/GoogleProvider.js"></script>
@@ -33,6 +35,8 @@
   <script src="GeoJSONDumper.spec.js"></script>
   
   <script src="Geocoded.spec.js"></script>
+  
+  <script src="GeocoderProviderFactory.spec.js"></script>
   
   <script src="providers/GoogleAPIProvider.spec.js"></script>
   
