--- a/example/mapquest.html
+++ b/example/mapquest.html
@@ -2,12 +2,9 @@
 <html>
   <head>
     <title>Geocoder.js: Mapquest Simple Example</title>
-    <script src="../src/GeocoderJS.js"></script>
-    <script src="../src/providers/ProviderBase.js"></script>
-    <script src="../src/providers/MapQuestProvider.js"></script>
-    <script src="../src/Geocoded.js"></script>
+    <script src="../dist/geocoder.js"></script>
     <script>
-      var mapQuestGeocoder = new GeocoderJS.MapquestProvider();
+      var mapQuestGeocoder = new GeocoderJS.createGeocoder('mapquest');
       mapQuestGeocoder.geocode('Washington, DC', function(result) {
         console.log(result);
       });
