--- a/example/mapquest.html
+++ b/example/mapquest.html
@@ -5,7 +5,7 @@
     <script src="../dist/geocoder.js"></script>
     <script>
       var mapQuestGeocoder = new GeocoderJS.createGeocoder('mapquest');
-      mapQuestGeocoder.geocode('Washington, DC', function(result) {
+      mapQuestGeocoder.geocode('1600 Pennsylvania Avenue NW, Washington, DC 20500', function(result) {
         console.log(result);
       });
 
