--- a/spec/runner.html
+++ b/spec/runner.html
@@ -26,9 +26,15 @@
   
   <script src="../src/GeocoderProviderFactory.js"></script>
   
+  <script src="../src/ExternalURILoader.js"></script>
+  
   <script src="../src/providers/GoogleAPIProvider.js"></script>
   
   <script src="../src/providers/MapquestProvider.js"></script>
+  
+  <script src="../src/providers/OpenStreetMapProvider.js"></script>
+  
+  <script src="ExternalURILoader.spec.js"></script>
   
   <script src="GeoJSONDumper.spec.js"></script>
   
@@ -39,6 +45,8 @@
   <script src="providers/GoogleAPIProvider.spec.js"></script>
   
   <script src="providers/MapquestProvider.spec.js"></script>
+  
+  <script src="providers/OpenStreetMapProvider.spec.js"></script>
   
   <script src="providers/ProviderBase.spec.js"></script>
   
