--- a/spec/runner.html
+++ b/spec/runner.html
@@ -3,16 +3,22 @@
 <head>
   <meta charset="utf-8">
   <title>Jasmine Spec Runner</title>
+  <link rel="shortcut icon" type="image/png" href=".grunt/grunt-contrib-jasmine/jasmine_favicon.png">
 
   <link rel="stylesheet" type="text/css" href="../.grunt/grunt-contrib-jasmine/jasmine.css">
 
 
+</head>
+<body>
+
   
-  <script src="../.grunt/grunt-contrib-jasmine/phantom-polyfill.js"></script>
+  <script src="../.grunt/grunt-contrib-jasmine/es5-shim.js"></script>
   
   <script src="../.grunt/grunt-contrib-jasmine/jasmine.js"></script>
   
   <script src="../.grunt/grunt-contrib-jasmine/jasmine-html.js"></script>
+  
+  <script src="../.grunt/grunt-contrib-jasmine/boot.js"></script>
   
   <script src="helpers/GoogleHelper.js"></script>
   
@@ -52,10 +58,6 @@
   
   <script src="../.grunt/grunt-contrib-jasmine/reporter.js"></script>
   
-  <script src="../.grunt/grunt-contrib-jasmine/jasmine-helper.js"></script>
-  
 
-</head>
-<body>
 </body>
 </html>
