--- a/example/google.html
+++ b/example/google.html
@@ -4,7 +4,7 @@
     <title>Geocoder.js: Google Simple Example</title>
     <script src="../dist/geocoder.js"></script>
     <script>
-      var googleGeocoder = new GeocoderJS.createGeocoder('google');
+      var googleGeocoder = new GeocoderJS.createGeocoder({'provider': 'google', 'apiKey': 'AIzaSyBNTK0quLu7AjYJ6f2h6pbGH9rkVXyv5zM'});
       googleGeocoder.geocode('1600 Pennsylvania Ave, Washington, DC', function(result) {
         console.log(result);
       });
