--- a/example/mapquest.html
+++ b/example/mapquest.html
@@ -4,14 +4,14 @@
     <title>Geocoder.js: Mapquest Simple Example</title>
     <script src="../dist/geocoder.js"></script>
     <script>
-      var mapQuestGeocoder = new GeocoderJS.createGeocoder('mapquest');
-      mapQuestGeocoder.geocode('1600 Pennsylvania Avenue NW, Washington, DC 20500', function(result) {
+      var mapQuestGeocoder = new GeocoderJS.createGeocoder({provider: 'mapquest', apiKey: 'Fmjtd%7Cluurnu6al1%2Cbg%3Do5-9wbg94'});
+      mapQuestGeocoder.geocode('1600 Pennsylvania Ave NW, Washington, DC', function(result) {
         console.log(result);
       });
 
-      mapQuestGeocoder.geodecode("44.915", "-93.21", function(result) {
-        console.log(result);
-      });
+//      mapQuestGeocoder.geodecode("44.915", "-93.21", function(result) {
+//        console.log(result);
+//      });
     </script>
   </head>
   <body>
