Added reverse geocoding for Mapquest

--- a/example/mapquest.html
+++ b/example/mapquest.html
@@ -9,9 +9,9 @@
         console.log(result);
       });
 
-//      mapQuestGeocoder.geodecode("44.915", "-93.21", function(result) {
-//        console.log(result);
-//      });
+      mapQuestGeocoder.geodecode("44.915", "-93.21", function(result) {
+        console.log(result);
+      });
     </script>
   </head>
   <body>
