--- a/spec/runner.html
+++ b/spec/runner.html
@@ -36,6 +36,8 @@
   
   <script src="../src/ExternalURILoader.js"></script>
   
+  <script src="../src/providers/BingProvider.js"></script>
+  
   <script src="../src/providers/GoogleAPIProvider.js"></script>
   
   <script src="../src/providers/MapquestProvider.js"></script>
@@ -49,6 +51,8 @@
   <script src="Geocoded.spec.js"></script>
   
   <script src="GeocoderProviderFactory.spec.js"></script>
+  
+  <script src="providers/BingProvider.spec.js"></script>
   
   <script src="providers/GoogleAPIProvider.spec.js"></script>
   
