--- a/example/mapquest.html
+++ b/example/mapquest.html
@@ -9,9 +9,11 @@
         console.log(result);
       });
 
-      mapQuestGeocoder.geodecode("44.915", "-93.21", function(result) {
-        console.log(result);
-      });
+      setTimeout(function() {
+        mapQuestGeocoder.geodecode("44.915", "-93.21", function(result) {
+          console.log(result);
+        });
+      }, 100);
     </script>
   </head>
   <body>
