Add Yandex support

--- a/spec/runner.html
+++ b/spec/runner.html
@@ -44,6 +44,8 @@
   
   <script src="../src/providers/OpenStreetMapProvider.js"></script>
   
+  <script src="../src/providers/YandexProvider.js"></script>
+  
   <script src="ExternalURILoader.spec.js"></script>
   
   <script src="GeoJSONDumper.spec.js"></script>
@@ -61,6 +63,8 @@
   <script src="providers/OpenStreetMapProvider.spec.js"></script>
   
   <script src="providers/ProviderBase.spec.js"></script>
+  
+  <script src="providers/YandexProvider.spec.js"></script>
   
   <script src="../.grunt/grunt-contrib-jasmine/reporter.js"></script>
   
