--- a/example/google.html
+++ b/example/google.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Geocoder.js: Google API Example</title>
-    <script src="../dist/geocoder.js"></script>
+    <title>Universal Geocoder: Google API Example</title>
+    <script src="../dist/universal-geocoder.js"></script>
     <script>
-      var googleGeocoder = GeocoderJS.createGeocoder({ provider: "google" });
+      var googleGeocoder = UniversalGeocoder.createGeocoder({ provider: "google" });
       googleGeocoder.geocode("1600 Pennsylvania Ave, Washington, DC", function(result) {
         console.log(result);
       });
