--- a/example/openstreetmap.html
+++ b/example/openstreetmap.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Geocoder.js: Nominatim Example</title>
-    <script src="../dist/geocoder.js"></script>
+    <title>Universal Geocoder: Nominatim Example</title>
+    <script src="../dist/universal-geocoder.js"></script>
     <script>
-      var openStreetMapGeocoder = GeocoderJS.createGeocoder("openstreetmap");
+      var openStreetMapGeocoder = UniversalGeocoder.createGeocoder("openstreetmap");
       openStreetMapGeocoder.geocode("1600 Pennsylvania Ave NW, Washington, DC", function(result) {
         console.log(result);
       });
