--- a/example/bing.html
+++ b/example/bing.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Universal Geocoder: Bing Example</title>
-    <script src="../dist/universal-geocoder.js"></script>
+    <title>Geocoder.js: Bing Example</title>
+    <script src="../dist/geocoder.js"></script>
     <script>
-      var bingGeocoder = UniversalGeocoder.createGeocoder({ provider: "bing", apiKey: "As11PsBXYvAoGEXmz59ZWl93T8_OACdXi2QnRKWMRIUK6hzOXgN3BcZHnbKyPZYo" });
+      var bingGeocoder = GeocoderJS.createGeocoder({ provider: "bing", apiKey: "As11PsBXYvAoGEXmz59ZWl93T8_OACdXi2QnRKWMRIUK6hzOXgN3BcZHnbKyPZYo" });
       bingGeocoder.geocode("1600 Pennsylvania Ave NW, Washington, DC", function(result) {
         console.log(result);
         console.log("GeoJSON:", GeoJsonDumper.dump(result[0]));
