Better Google Maps provider (#2)

--- a/example/web/bing.html
+++ b/example/web/bing.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Universal Geocoder: Bing Example</title>
-    <script src="../dist/universal-geocoder.js"></script>
+    <script src="../../dist/universal-geocoder.js"></script>
     <script>
       var bingGeocoder = UniversalGeocoder.createGeocoder({ provider: "bing", apiKey: "As11PsBXYvAoGEXmz59ZWl93T8_OACdXi2QnRKWMRIUK6hzOXgN3BcZHnbKyPZYo" });
       bingGeocoder.geocode("1600 Pennsylvania Ave NW, Washington, DC", function(result) {
