--- a/example/web/mapbox.html
+++ b/example/web/mapbox.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Universal Geocoder: Mapbox Example</title>
-    <script src="../dist/universal-geocoder.js"></script>
+    <script src="../../dist/universal-geocoder.js"></script>
     <script>
       var mapboxGeocoder = UniversalGeocoder.createGeocoder({ provider: "mapbox" });
       mapboxGeocoder.geocode("1600 Pennsylvania Ave NW, Washington, DC", function(result) {
