--- a/example/web/mapquest.html
+++ b/example/web/mapquest.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Universal Geocoder: Mapquest Example</title>
-    <script src="../dist/universal-geocoder.js"></script>
+    <script src="../../dist/universal-geocoder.js"></script>
     <script>
       var mapQuestGeocoder = UniversalGeocoder.createGeocoder({ provider: "mapquest", apiKey: "Fmjtd%7Cluurnu6al1%2Cbg%3Do5-9wbg94" });
       mapQuestGeocoder.geocode("1600 Pennsylvania Ave NW, Washington, DC", function(result) {
