--- a/example/web/opencage.html
+++ b/example/web/opencage.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Universal Geocoder: OpenCage Example</title>
-    <script src="../dist/universal-geocoder.js"></script>
+    <script src="../../dist/universal-geocoder.js"></script>
     <script>
       var openCageGeocoder = UniversalGeocoder.createGeocoder({ provider: "opencage" });
       openCageGeocoder.geocode("1600 Pennsylvania Ave NW, Washington, DC", function(result) {
