--- a/example/web/yandex.html
+++ b/example/web/yandex.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Universal Geocoder: Yandex Example</title>
-    <script src="../dist/universal-geocoder.js"></script>
+    <script src="../../dist/universal-geocoder.js"></script>
     <script>
       var yandexGeocoder = UniversalGeocoder.createGeocoder("yandex");
       yandexGeocoder.geocode({ text: "1600 Pennsylvania Ave, Washington, DC", locale: "en-US" }, function(result) {
