--- a/example/web/openstreetmap.html
+++ b/example/web/openstreetmap.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Universal Geocoder: Nominatim Example</title>
-    <script src="../dist/universal-geocoder.js"></script>
+    <script src="../../dist/universal-geocoder.js"></script>
     <script>
       var openStreetMapGeocoder = UniversalGeocoder.createGeocoder({ provider: "openstreetmap", userAgent: "Universal Geocoder Example" });
       openStreetMapGeocoder.geocode("1600 Pennsylvania Ave NW, Washington, DC", function(result) {
